// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Todo: Example of using mount should render complete todo 1`] = `
<article
  class=" ms__enAiqr"
>
  <label>
    <del
      class="text-muted"
    >
      <input
        checked="true"
        type="checkbox"
      />
      My Todo Item
    </del>
  </label>
  <button
    class="btn btn-sm btn-outline-secondary"
  >
    Delete
  </button>
</article>
`;

exports[`Todo: Example of using mount should render incomplete todo 1`] = `
<article
  class=" ms__enAiqr"
>
  <label>
    <input
      type="checkbox"
    />
    My Todo Item
  </label>
  <button
    class="btn btn-sm btn-outline-secondary"
  >
    Delete
  </button>
</article>
`;
